// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should corectly render expenses summary with multiple expense 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totalling $
    $12,312,312,312.13
  </h1>
</div>
`;

exports[`Should corectly render expenses summary with one expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling $
    $2.35
  </h1>
</div>
`;
